# OMEROSlicer

./: CMakeLists.txt  README.md
OMEROImporter/: CMakeLists.txt  OMEROImporter.py
OMEROImporter/Resources/UI/: OMEROImporter.ui
